<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sampleapp.ui.activity.StartActivity"
    tools:ignore="MissingPrefix,ContentDescription">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/house" />

    <TextView
        android:id="@+id/text_cirrent"
        fontPath="fonts/montserrat_regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/cirrent"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/text_title"
        fontPath="fonts/montserrat_regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_cirrent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/wi_fi_onboarding"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_above="@+id/button_skip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sign_in"
        style="@style/AppTheme.Button.Yellow" />

    <TextView
        android:id="@+id/button_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_privacy_links"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/selector_white_yellow"
        android:text="@string/skip" />

    <TextView
        android:id="@+id/text_privacy_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_12"
        android:textColor="@color/selector_white_yellow" />
</RelativeLayout>
